# pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.docx  README.md  读书报告.docx
include/: AABB.h  Aggregate.h  BSDF.cpp  BSDF.h  Camera.h  Intersection.h  Light.h  Material.h  OctTree.h  Primitive.h  Ray.h  Renderer.h  Scene.h  Skybox.h  Triangle.h  Types.h  Utils.h
include/integrator/: Integrator.h  Path.h  WhiteFurnace.h  Whitted.h
src/: AABB.cpp  AABB.h  Aggregate.cpp  Aggregate.h  BSDF.cpp  BSDF.h  Bound3f.cpp  Bound3f.h  Camera.cpp  Film.cpp  Film.h  Integrator.cpp  Integrator.h  Light.cpp  Light.h  Log.cpp  Log.h  Material.cpp  Material.h  OctTree.cpp  OctTree.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Skybox.cpp  Triangle.cpp  Triangle.h  Types.h  Utils.cpp  Utils.h  WhittedIntegrator.cpp  WhittedIntegrator.h  accel.cpp  accel.h  bsdf.h  (+10 more)
src/Integrator/: Integrator.cpp  Integrator.h  Path.cpp  Whitted.cpp
src/integrator/: WhiteFurnace.cpp
